supplier refresh done, create po , spelling changed and address 2 non mandatory Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -11,7 +11,7 @@
                           </p>
                     </div>
                         <button  mat-raised-button   [routerLink]="['../../po/initiate-po']" class="main-background-color main-button color-white">
-                           Initiate P.O.
+                           Create P.O.
                         </button>
                 </div>
            </div> 
@@ -35,7 +35,7 @@
         <div class="text-right add-user-details-button-right p-t-10 p-r-20">
           <button mat-raised-button class="main-background-color main-button color-white m-b-5"
             [routerLink]="['../../po/initiate-po']" matTooltip="Issue P.O. to supplier without Request For Quotations">
-            Initiate P.O.
+            Create P.O.
           </button>
         </div>
       </div>
