--- a/src/app/features/rfq-supplier-template/rfq-supplier-add-address/rfq-supplier-add-address.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-add-address/rfq-supplier-add-address.component.html
@@ -80,11 +80,11 @@
               <div class="col-sm-6">
                 <!-- PinCode -->
                 <mat-form-field class="border-input add-edit-user-form-modal">
-                  <input matInput type="text" placeholder="addressLine2" formControlName="addressLine2" required />
+                  <input matInput type="text" placeholder="addressLine2" formControlName="addressLine2" />
                   <!-- <mat-error class="mat-error-add-edit-form-modal">addressLine2 is Required</mat-error> -->
-                  <small
+                  <!-- <small
                     *ngIf="form.controls['addressLine2'].hasError('required') && form.controls['addressLine2'].touched"
-                    class="form-error-msg"> Address Line 2 is required </small>
+                    class="form-error-msg"> Address Line 2 is required </small> -->
                   <small
                     *ngIf="form.controls['addressLine2'].hasError('pattern') && form.controls['addressLine2'].touched"
                     class="form-error-msg"> Enter Valid Address Line 2</small>
@@ -94,36 +94,7 @@
             </div>
 
             <!-- fifth row-->
-            <!-- fourth row -->
-            <div class="row">
-              <div class="col-sm-6">
-                <!-- PinCode -->
-                <mat-form-field class="border-input add-edit-user-form-modal">
-                  <input matInput type="text" placeholder="City" formControlName="city" required />
-                  <!-- <mat-error class="mat-error-add-edit-form-modal">city is Required</mat-error> -->
-                  <small *ngIf="form.controls['city'].hasError('required') && form.controls['city'].touched"
-                    class="form-error-msg"> city is required </small>
-                  <small *ngIf="form.controls['city'].hasError('pattern') && form.controls['city'].touched"
-                    class="form-error-msg"> Enter Valid city</small>
-                </mat-form-field>
-              </div>
-
-              <div class="col-sm-6">
-                <!-- PinCode -->
-                <mat-form-field class="border-input add-edit-user-form-modal">
-                  <input matInput type="text" placeholder="State" formControlName="state" required />
-                  <!-- <mat-error class="mat-error-add-edit-form-modal">state is Required</mat-error> -->
-                  <small *ngIf="form.controls['state'].hasError('required') && form.controls['state'].touched"
-                    class="form-error-msg"> state is required </small>
-                  <small *ngIf="form.controls['state'].hasError('pattern') && form.controls['state'].touched"
-                    class="form-error-msg"> Enter Valid state</small>
-                </mat-form-field>
-              </div>
-
-            </div>
-
-            <!-- sixth row-->
-            <!-- fourth row -->
+             <!-- fourth row -->
             <div class="row">
               <div class="col-sm-6">
                 <!-- PinCode -->
@@ -136,12 +107,42 @@
                     class="form-error-msg"> Enter Valid pinCode</small>
                 </mat-form-field>
               </div>
-
-              <div class="col-sm-6">
-
+          
+             <div class="col-sm-6">
+                <!-- PinCode -->
+                <mat-form-field class="border-input add-edit-user-form-modal">
+                  <input matInput type="text" placeholder="City" formControlName="city" required />
+                  <!-- <mat-error class="mat-error-add-edit-form-modal">city is Required</mat-error> -->
+                  <small *ngIf="form.controls['city'].hasError('required') && form.controls['city'].touched"
+                    class="form-error-msg"> city is required </small>
+                  <small *ngIf="form.controls['city'].hasError('pattern') && form.controls['city'].touched"
+                    class="form-error-msg"> Enter Valid city</small>
+                </mat-form-field>
               </div>
 
             </div>
+            
+            <!-- fourth row -->
+            <div class="row">
+              <div class="col-sm-6">
+                <!-- PinCode -->
+                <mat-form-field class="border-input add-edit-user-form-modal">
+                  <input matInput type="text" placeholder="State" formControlName="state" required />
+                  <!-- <mat-error class="mat-error-add-edit-form-modal">state is Required</mat-error> -->
+                  <small *ngIf="form.controls['state'].hasError('required') && form.controls['state'].touched"
+                    class="form-error-msg"> state is required </small>
+                  <small *ngIf="form.controls['state'].hasError('pattern') && form.controls['state'].touched"
+                    class="form-error-msg"> Enter Valid state</small>
+                </mat-form-field>
+              </div>
+              <div class="col-sm-6">
+                
+              </div>
+
+            </div>
+
+            <!-- sixth row-->
+           
 
           </div>
           <!-- end structure -->
