--- a/src/app/features/rfq-supplier-template/rfq-supplier-after-bid/rfq-supplier-after-bid.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-after-bid/rfq-supplier-after-bid.component.html
@@ -14,7 +14,7 @@
          Thank You
          </div>
          <div class="quotes-submitted">
-          your quotes are sumitted successfully.
+          Your quote has been submitted successfully.
          </div>
          
       </div>
