--- a/src/app/shared/dialogs/add-supplier/suppliers-dialog.html
+++ b/src/app/shared/dialogs/add-supplier/suppliers-dialog.html
@@ -36,11 +36,11 @@
         </mat-form-field>
       </div>
 
-      <div class="col-xs-12 display-flex supplier-dialog">
+      <!-- <div class="col-xs-12 display-flex supplier-dialog">
         <mat-form-field class="border-input">
           <input matInput type="text" formControlName="pan" placeholder="PAN" />
         </mat-form-field>
-      </div>
+      </div> -->
     </div>
   </div>
 
