Walkthrough.scss done Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -20,5 +20,6 @@
     @import "./pages/signin-signup.scss";
     @import "./layout/loader.scss";
     @import "./pages/indent.scss";
-    @import '../../../node_modules/ngx-guided-tour/scss/guided-tour-base-theme.scss';
+   // @import '../../../node_modules/ngx-guided-tour/scss/guided-tour-base-theme.scss';
     @import "./pages/select-project.scss";
+    @import "./pages/walkthrough.scss";
