--- a/src/app/features/app-dashboard/app-dashboard.component.html
+++ b/src/app/features/app-dashboard/app-dashboard.component.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-md-9">
                 <div class="things-to-do bg-white p-4 mb-4">
-                    <h5 class="mb-3">Things to do</h5>
+                    <!-- <h5 class="mb-3">Things to do</h5> -->
                     <div class="things-to-do__inner d-flex justify-content-between align-items-center">
                         <div class="things-to-do__icons text-center cursor" (click)="openProject()" matTooltip="Add Project">
                             <div class="things-to-do__img">
