--- a/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
@@ -1,48 +1,42 @@
 <div class="row ">
-    <div class="col-xs-12 text-right">
-        <mat-form-field class="input-search-padding-zero  border-input pull-right">
-            <input matInput placeholder="Search Supplier" type="search" [(ngModel)]="searchText"
-                [ngModelOptions]="{standalone: true}" />
-            <button mat-button matSuffix mat-icon-button>
-                <mat-icon>search</mat-icon>
-            </button>
-        </mat-form-field>
-        <button mat-raised-button class="main-background-color main-button color-white m-r-15"
-            (click)="openDialog( this.rfqData.rfqProjectsList[0].projectId)">
-            <i class="material-icons addSupplier">add</i> Supplier
-        </button>
-    </div>
+  <div class="col-xs-12 text-right">
+    <mat-form-field class="input-search-padding-zero  border-input pull-right">
+      <input matInput placeholder="Search Supplier" type="search" [(ngModel)]="searchText" [ngModelOptions]="{standalone: true}" />
+      <button mat-button matSuffix mat-icon-button>
+        <mat-icon>search</mat-icon>
+      </button>
+    </mat-form-field>
+    <button mat-raised-button class="main-background-color main-button color-white m-r-15" (click)="openSupplierDialog(this.rfqData.rfqProjectsList[0].projectId)">
+      <i class="material-icons addSupplier">add</i> Supplier
+    </button>
+  </div>
 </div>
 <form *ngIf="allSuppliers.length" [formGroup]="supplierForm">
-    <table mat-table [dataSource]="allSuppliers | SearchPipe: searchText:'supplier_name'" formArrayName="forms"
-        class="mat-elevation-z8 col-sm-12">
-        <ng-container matColumnDef="Supplier Name">
-            <th mat-header-cell *matHeaderCellDef>Supplier Name</th>
-            <td mat-cell *matCellDef="let element;let i=index" [formGroupName]=i>
-                <mat-checkbox [checked]="element.supplierId===newAddedId?true:false" #ch
-                    (change)="valueChange(element,ch,i)">
-                </mat-checkbox>
-                {{ element.supplier_name }}
-            </td>
-        </ng-container>
+  <table mat-table [dataSource]="allSuppliers | SearchPipe: searchText:'supplier_name'" formArrayName="forms" class="mat-elevation-z8 col-sm-12">
+    <ng-container matColumnDef="Supplier Name">
+      <th mat-header-cell *matHeaderCellDef>Supplier Name</th>
+      <td mat-cell *matCellDef="let element; let i = index" [formGroupName]="i">
+        <mat-checkbox [checked]="element.supplierId === newAddedId ? true : false" #ch (change)="valueChange(element, ch, i)"> </mat-checkbox>
+        {{ element.supplier_name }}
+      </td>
+    </ng-container>
 
-        <ng-container matColumnDef="Email">
-            <th mat-header-cell *matHeaderCellDef>Email</th>
-            <td mat-cell *matCellDef="let element">{{ element.email }}</td>
-        </ng-container>
+    <ng-container matColumnDef="Email">
+      <th mat-header-cell *matHeaderCellDef>Email</th>
+      <td mat-cell *matCellDef="let element">{{ element.email }}</td>
+    </ng-container>
 
-        <ng-container matColumnDef="Phone No.">
-            <th mat-header-cell *matHeaderCellDef>Phone No.</th>
-            <td mat-cell *matCellDef="let element">{{ element.contact_no }}</td>
-        </ng-container>
+    <ng-container matColumnDef="Phone No.">
+      <th mat-header-cell *matHeaderCellDef>Phone No.</th>
+      <td mat-cell *matCellDef="let element">{{ element.contact_no }}</td>
+    </ng-container>
 
-        <ng-container matColumnDef="PAN No.">
-            <th mat-header-cell *matHeaderCellDef>PAN No.</th>
-            <td mat-cell *matCellDef="let element">{{ element.pan }}</td>
-        </ng-container>
+    <ng-container matColumnDef="PAN No.">
+      <th mat-header-cell *matHeaderCellDef>PAN No.</th>
+      <td mat-cell *matCellDef="let element">{{ element.pan }}</td>
+    </ng-container>
 
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
 </form>
