--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -18,6 +18,7 @@
   </div> 
  
   </div>
+  
   <div
     *ngIf="allProjects.length > 0"
     class="p-l-20 p-r-20 p-b-20 min-height parent"
@@ -25,7 +26,7 @@
     <!-- fix part -->
     <div class="row p-t-15 p-b-10">
       <div class="col-xs-6">
-        <mat-form-field class="example-form-field border-input">
+        <mat-form-field class="example-form-field border-input project">
           <input
             matInput
             placeholder="Search Projects"
