--- a/src/app/shared/layout/header/header.html
+++ b/src/app/shared/layout/header/header.html
@@ -8,7 +8,7 @@
       <span class="menu-spacer"></span>
       
     <button  class="pull-right p-t-10"
-      mat-button>
+      mat-button [disableRipple]="true">
 
        <a href="javascript:void(0)" (click)="openDiv()">
          <mat-icon [ngClass]="{'bell-icon-active': notifClicked === true,'bell-icon':notifClicked === false }" matBadge="{{unreadnotificationLength}}" matBadgeSize="small" matBadge="15" matBadgeColor="warn">notifications</mat-icon>
@@ -75,14 +75,14 @@
       Supplier
     </button>
 
-    <button class="color-white pull-right p-t-10" mat-button>
+    <!-- <button class="color-white pull-right p-t-10" mat-button>
 
       <a href="javascript:void(0)" (click)="openDiv()">
         <mat-icon [ngClass]="{'bell-icon-active': notifClicked === true,'bell-icon':notifClicked === false }"
           matBadge="{{unreadnotificationLength}}" matBadgeSize="small" matBadge="15" matBadgeColor="warn">notifications
         </mat-icon>
       </a>
-    </button>
+    </button> -->
   </div>
 
   <ng-container *ngIf="notifClicked">
